fixed spacing and justified content

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,9 @@
   background-repeat: no-repeat;  
   background-size: 100% 100%;
   align-content: center;
+  justify-content: center;
   width: 100%;
+  padding-left: 5%;
 }
 
 a{
@@ -23,18 +25,24 @@ button{
 
 .navbar h3{
   text-align: center;
-  font-size: 1.9vw;
+  font-size: 2vw;
   padding-top: 5%;
   padding-bottom: 15%;
-  font-family: 'Normal-Regular' ;
-  font-weight: 400;
+  font-family: 'Normal-Regular';
+  
 }
 
-.alignCenter{
-  padding-left: 20%;
-  padding-right: 20%;
-  text-align: center;
+.centered-row{
+  display: flex;
+  flex-direction: column;
   justify-content: center;
+  margin: 0 auto;
+  width: 100%; 
+
+}
+
+.do-it {
+  text-align: center;
 }
 
 .nav{
@@ -54,9 +62,10 @@ button{
 .about p{
   
   font-family: 'Normal-Regular';
+  text-align: justify;
   padding-left: 5%;
   font-size: 2vw;
-  padding-right: 3%;
+  padding-right: 5%;
   padding-top: 5%;
   padding-bottom: 3%;
 }
@@ -97,12 +106,13 @@ span {
 }
 
 .capabilities p{
-  padding-left: 5%;
-  padding-right: 3%;
-  font-size: 1.9vw;
   font-family: 'Normal-Regular';
-  padding-top: 2%;
-  padding-bottom: 2%;
+  text-align: justify;
+  padding-left: 5%;
+  font-size: 2vw;
+  padding-right: 5%;
+  padding-top: 5%;
+  padding-bottom: 3%;
 }
 
 p{
@@ -158,6 +168,7 @@ h3{
 }
 
 .leadership p{
+  text-align: justify;
   padding-left: 3%;
   padding-right: 3%;
 }
